--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Description: Efficient tabulation with Stata-like output.
 	For each unique value of the variable, it shows the number of 
 	observations with that value, proportion of observations with that
 	value, and cumulative proportion, in descending order of frequency.
-	Accepts data.table or tibble as input. 
+	Accepts data.table, tibble, or data.frame as input. 
 	Efficient with big data: if you give it a data.table, 
 	tab() uses data.table syntax.
 Imports:
@@ -14,7 +14,8 @@ Imports:
 	data.table,
 	tibble,
 	stringr,
-	magrittr
+	magrittr,
+	rlang
 Depends: R (>= 3.4.2)
 License: MIT
 Encoding: UTF-8
