--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,13 +13,15 @@ Imports:
 	assertthat,
 	dplyr,
 	data.table,
-	tibble,
-	stringr,
 	magrittr,
+	purrr,
 	rlang,
-	purrr
-Depends: R (>= 3.4.2)
-License: MIT
+	stats,
+	stringr,
+	tibble,
+	tidyr
+Depends: R (>= 3.4.0)
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.1
