Fixed all issues, prepared for first build

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,12 @@ S3method(tabcount,tbl_df)
 export(quantiles)
 export(tab)
 export(tabcount)
-import(data.table)
+importFrom(data.table,":=")
+importFrom(data.table,.GRP)
+importFrom(data.table,.N)
+importFrom(data.table,.SD)
+importFrom(data.table,data.table)
+importFrom(data.table,setcolorder)
+importFrom(dplyr,tibble)
 importFrom(magrittr,"%>%")
 importFrom(stats,quantile)
