Last update before CRAN upload

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: tabulator
-Title: Efficient tabulation with Stata-like output
-Version: 1.0.0.0000
-Authors@R: person("Sean", "Higgins", email = "seanhiggins@berkeley.edu", role = c("aut", "cre"))
+Title: Efficient Tabulation with Stata-Like Output
+Version: 1.0.0
+Authors@R: person("Sean", "Higgins", email = "sean.higgins@kellogg.northwestern.edu", role = c("aut", "cre"))
 Description: Efficient tabulation with Stata-like output.
 	For each unique value of the variable, it shows the number of 
 	observations with that value, proportion of observations with that
